--- a/University(MVC)/Views/Groups/ByDepartment.cshtml
+++ b/University(MVC)/Views/Groups/ByDepartment.cshtml
@@ -7,7 +7,7 @@
 <h1>Групи кафедри @ViewBag.DepartmentName</h1>
 
 <p>
-    <a asp-action="Create">Create New</a>
+    <a asp-action="Create">Додати нову групу</a>
 </p>
 <table class="table">
     <thead>
