--- a/University(MVC)/Views/Groups/Index.cshtml
+++ b/University(MVC)/Views/Groups/Index.cshtml
@@ -4,6 +4,7 @@
     ViewData["Title"] = "Index";
 }
 
+
 <h1>Групи</h1>
 
 <p>
@@ -25,26 +26,27 @@
         </tr>
     </thead>
     <tbody>
-@foreach (var item in Model) {
-        <tr>
-            <td>
-                @Html.DisplayFor(modelItem => item.Name)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.ClassPr.Name)
-                @Html.DisplayFor(modelItem => item.ClassPr.Surname)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Department.Name)
-            </td>
-            <td>
+        @foreach (var item in Model)
+        {
+            <tr>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Name)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.ClassPr.Name)
+                    @Html.DisplayFor(modelItem => item.ClassPr.Surname)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Department.Name)
+                </td>
+                <td>
 
-                <a asp-action="Shedule" asp-route-id="@item.Id">Розклад</a> |
-                <a asp-action="Details" asp-route-id="@item.Id">Студенти</a> |
-                <a asp-action="Edit" asp-route-id="@item.Id">Редагування</a> |
-                <a asp-action="Delete" asp-route-id="@item.Id">Видалення</a>
-            </td>
-        </tr>
-}
+                    <a asp-action="Shedule" asp-route-id="@item.Id">Розклад</a> |
+                    <a asp-action="Details" asp-route-id="@item.Id">Студенти</a> |
+                    <a asp-action="Edit" asp-route-id="@item.Id">Редагування</a> |
+                    <a asp-action="Delete" asp-route-id="@item.Id">Видалення</a>
+                </td>
+            </tr>
+        }
     </tbody>
 </table>
