--- a/University(MVC)/Views/Home/Index.cshtml
+++ b/University(MVC)/Views/Home/Index.cshtml
@@ -8,7 +8,7 @@
 <p>
     <a asp-controller="Groups" asp-action="Index">Groups</a> |
     <a asp-controller="Deparments" asp-action="Index">Departments</a> |
-    <a asp-controller="Shedules" asp-action="Indexx">Shedules</a> |
+    <!--   <a asp-controller="Shedules" asp-action="Indexx">Shedules</a> |-->
     <a asp-controller="Lessons" asp-action="Index">Lessons</a>
 </p>
 <div class="row">
@@ -22,4 +22,4 @@
     </div>
 </div>
 
-<marquee behavior="alternate" direction="right">Делаю лабы за деньги , пишите в телегу nilolay_lvdn (P.S Убейте меня , сейчас пол третьего ночи почему я не сплю)</marquee>
+<marquee behavior="alternate" direction="right">KILL ME PLS</marquee>
