--- a/University(MVC)/Views/Shedules/Index.cshtml
+++ b/University(MVC)/Views/Shedules/Index.cshtml
@@ -7,7 +7,7 @@
 <h1>Розклад групи @ViewBag.GroupName</h1>
 
 <p>
-    @Html.ActionLink("Створити новий розклад", "Create", new { Id = @ViewBag.GroupId , Name = ViewBag.GroupName})
+    <!-- @Html.ActionLink("Створити новий розклад", "Create", new { Id = @ViewBag.GroupId , Name = ViewBag.GroupName})-->
 </p>
 <table class="table">
     <thead>
