--- a/University(MVC)/Views/LessonToschedules/Delete.cshtml
+++ b/University(MVC)/Views/LessonToschedules/Delete.cshtml
@@ -21,13 +21,7 @@
             @Html.DisplayNameFor(model => model.Lesson)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Lesson.Id)
-        </dd class>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Schedule)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Schedule.Id)
+            @Html.DisplayFor(model => model.Lesson.Name)
         </dd class>
     </dl>
     
