--- a/University(MVC)/Views/LessonToschedules/Edit.cshtml
+++ b/University(MVC)/Views/LessonToschedules/Edit.cshtml
@@ -13,11 +13,9 @@
         <form asp-action="Edit">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <input type="hidden" asp-for="Id" />
-            <div class="form-group">
-                <label asp-for="ScheduleId" class="control-label"></label>
-                <select asp-for="ScheduleId" class="form-control" asp-items="ViewBag.ScheduleId"></select>
-                <span asp-validation-for="ScheduleId" class="text-danger"></span>
-            </div>
+
+            <input type="hidden" value="@ViewBag.SheduleId" name="ScheduleId" />
+
             <div class="form-group">
                 <label asp-for="LessonId" class="control-label"></label>
                 <select asp-for="LessonId" class="form-control" asp-items="ViewBag.LessonId"></select>
