--- a/University(MVC)/Views/Shedules/Create.cshtml
+++ b/University(MVC)/Views/Shedules/Create.cshtml
@@ -4,7 +4,7 @@
     ViewData["Title"] = "Create";
 }
 
-<h1>Створення нового розкладу @ViewBag.GroupN</h1>
+<h1>Створення нового розкладу @ViewBag.GroupN @ViewBag.GroupId</h1>
 
 <h4>Shedule</h4>
 <hr />
@@ -12,11 +12,13 @@
     <div class="col-md-4">
         <form asp-action="Create">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+
+            <input type="hidden" value="@ViewBag.GroupId" name="GroupId" />
+
             <div class="form-group">
                 <label asp-for="DayId" class="control-label"></label>
                 <select asp-for="DayId" class="form-control" asp-items="ViewBag.DayId"></select>
             </div>
-            <input type="hidden" value="@ViewBag.Group" name="GroupId" />
 
             <div class="form-group">
                 <input type="submit" value="Створити" class="btn btn-primary" />
@@ -26,7 +28,7 @@
 </div>
 
 <div>
-    @Html.ActionLink("Повернутися до списку", "Index", new { Id = @ViewBag.Group ,name=@ViewBag.GroupN })
+    @Html.ActionLink("Повернутися до списку", "Index", new { Id = @ViewBag.GroupId ,name=@ViewBag.GroupN })
 </div>
 
 @section Scripts {
