--- a/University(MVC)/Views/Groups/ByDepartment.cshtml
+++ b/University(MVC)/Views/Groups/ByDepartment.cshtml
@@ -40,10 +40,10 @@
                 </td>
                 <td>
 
-                    <a asp-action="Shedule" asp-route-id="@item.Id">Shedule</a> |
-                    <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
-                    <a asp-action="Details" asp-route-id="@item.Id">Details</a> |
-                    <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
+                    <a asp-action="Shedule" asp-route-id="@item.Id">Розклад</a> |
+                    <a asp-action="Edit" asp-route-id="@item.Id">Редагування</a> |
+                    <a asp-action="Details" asp-route-id="@item.Id">Студенти</a> |
+                    <a asp-action="Delete" asp-route-id="@item.Id">Видалення</a>
                 </td>
             </tr>
         }
