--- a/University(MVC)/Views/Groups/Create.cshtml
+++ b/University(MVC)/Views/Groups/Create.cshtml
@@ -30,7 +30,7 @@
 </div>
 
 <div>
-    <a asp-action="Index">Повернутися до списку груп</a>
+    <a href='javascript:history.go(-1)'>Повернутися до списку</a>
 </div>
 
 @section Scripts {
