--- a/University(MVC)/Views/LessonToschedules/Create.cshtml
+++ b/University(MVC)/Views/LessonToschedules/Create.cshtml
@@ -33,7 +33,7 @@
 </div>
 
 <div>
-    @Html.ActionLink("Повернутися до списку","Index", new {id= ViewBag.SheduleId })
+    <a href='javascript:history.go(-1)'>Повернутися до списку</a>
 </div>
 
 @section Scripts {
