--- a/University(MVC)/Views/Deparments/Create.cshtml
+++ b/University(MVC)/Views/Deparments/Create.cshtml
@@ -25,7 +25,7 @@
 </div>
 
 <div>
-    <a asp-action="Index">Back to List</a>
+    <a href='javascript:history.go(-1)'>Повернутися до списку</a>
 </div>
 
 @section Scripts {
