--- a/University(MVC)/Views/Deparments/Edit.cshtml
+++ b/University(MVC)/Views/Deparments/Edit.cshtml
@@ -26,7 +26,7 @@
 </div>
 
 <div>
-    <a asp-action="Index">Back to List</a>
+    <a href='javascript:history.go(-1)'>Повернутися до списку</a>
 </div>
 
 @section Scripts {
