--- a/University(MVC)/Views/Groups/Edit.cshtml
+++ b/University(MVC)/Views/Groups/Edit.cshtml
@@ -36,7 +36,7 @@
 </div>
 
 <div>
-    <a asp-action="Index">Повернутися до списку</a>
+    <a href='javascript:history.go(-1)'>Повернутися до списку</a>
 </div>
 
 @section Scripts {
