--- a/University(MVC)/Views/LessonToschedules/Edit.cshtml
+++ b/University(MVC)/Views/LessonToschedules/Edit.cshtml
@@ -34,7 +34,8 @@
 </div>
 
 <div>
-    <a asp-action="Index">Back to List</a>
+
+    <a href='javascript:history.go(-1)'>Повернутися до списку</a>
 </div>
 
 @section Scripts {
