--- a/University(MVC)/Views/Lessons/Index.cshtml
+++ b/University(MVC)/Views/Lessons/Index.cshtml
@@ -26,8 +26,7 @@
             </td>
             <td>
                 <a asp-action="Edit" asp-route-id="@item.Id">Редагування</a> |
-                <a asp-action="Details" asp-route-id="@item.Id">Details</a> |
-                <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
+                <a asp-action="Delete" asp-route-id="@item.Id">Видалення</a>
             </td>
         </tr>
 }
