--- a/University(MVC)/Views/Students/Delete.cshtml
+++ b/University(MVC)/Views/Students/Delete.cshtml
@@ -46,6 +46,6 @@
     <form asp-action="Delete">
         <input type="hidden" asp-for="Id" />
         <input type="submit" value="Delete" class="btn btn-danger" /> |
-        <a asp-action="Index">Back to List</a>
+        <a href='javascript:history.go(-1)'>Повернутися до списку</a>
     </form>
 </div>
