--- a/University(MVC)/Views/Students/Edit.cshtml
+++ b/University(MVC)/Views/Students/Edit.cshtml
@@ -43,7 +43,7 @@
 </div>
 
 <div>
-    <a asp-action="Index">Повернутися до списку</a>
+    <a href='javascript:history.go(-1)'>Повернутися до списку студентів</a>
 </div>
 
 @section Scripts {
