--- a/University(MVC)/Views/Groups/ByDepartment.cshtml
+++ b/University(MVC)/Views/Groups/ByDepartment.cshtml
@@ -3,49 +3,68 @@
 @{
     ViewData["Title"] = "Index";
 }
-
-<h1>Групи кафедри @ViewBag.DepartmentName</h1>
-
-<p>
-    <a asp-action="Create">Додати нову групу</a>
-</p>
-<table class="table">
-    <thead>
-        <tr>
-            <th>
-                @Html.DisplayNameFor(model => model.Name)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.ClassPr)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Department)
-            </th>
-            <th></th>
-        </tr>
-    </thead>
-    <tbody>
-        @foreach (var item in Model)
-        {
-            <tr>
-                <td>
-                    @Html.DisplayFor(modelItem => item.Name)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.ClassPr.Name)
-                    @Html.DisplayFor(modelItem => item.ClassPr.Surname)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.Department.Name)
-                </td>
-                <td>
-
-                    <a asp-action="Shedule" asp-route-id="@item.Id">Розклад</a> |
-                    <a asp-action="Edit" asp-route-id="@item.Id">Редагування</a> |
-                    <a asp-action="Details" asp-route-id="@item.Id">Студенти</a> |
-                    <a asp-action="Delete" asp-route-id="@item.Id">Видалення</a>
-                </td>
-            </tr>
+<head>
+    <style>
+        body {
+            background-image: url(https://p4.wallpaperbetter.com/wallpaper/914/746/419/abstract-digital-art-minimalism-simple-background-wallpaper-68564d7870703ce8d03c017ef822649a.jpg);
+            background-size: cover;
+            background-repeat: no-repeat;
         }
-    </tbody>
-</table>
+
+        .bg-mydark {
+            opacity: 0.8;
+        }
+
+        .text-mybright {
+            opacity: 1;
+            color: black;
+        }
+    </style>
+</head>
+<div class="bg-light text-center bg-mydark">
+    <h1 class="text-center text-mybright">Групи кафедри @ViewBag.DepartmentName</h1>
+
+    <p class="text-center text-mybright">
+        <a asp-action="Create">Додати нову групу</a>
+    </p>
+    </div>
+    <table class="table jumbotron bg-mydark">
+        <thead class="text-mybright">
+            <tr>
+                <th>
+                    @Html.DisplayNameFor(model => model.Name)
+                </th>
+                <th>
+                    @Html.DisplayNameFor(model => model.ClassPr)
+                </th>
+                <th>
+                    @Html.DisplayNameFor(model => model.Department)
+                </th>
+                <th></th>
+            </tr>
+        </thead>
+        <tbody class="text-mybright">
+            @foreach (var item in Model)
+            {
+                <tr>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.Name)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.ClassPr.Name)
+                        @Html.DisplayFor(modelItem => item.ClassPr.Surname)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.Department.Name)
+                    </td>
+                    <td>
+
+                        <a asp-action="Shedule" asp-route-id="@item.Id">Розклад</a> |
+                        <a asp-action="Edit" asp-route-id="@item.Id">Редагування</a> |
+                        <a asp-action="Details" asp-route-id="@item.Id">Студенти</a> |
+                        <a asp-action="Delete" asp-route-id="@item.Id">Видалення</a>
+                    </td>
+                </tr>
+            }
+        </tbody>
+    </table>
