--- a/University(MVC)/Views/Shedules/Index.cshtml
+++ b/University(MVC)/Views/Shedules/Index.cshtml
@@ -3,28 +3,48 @@
 @{
     ViewData["Title"] = "Index";
 }
+<head>
+    <style>
+        body {
+            background-image: url(https://p4.wallpaperbetter.com/wallpaper/518/75/784/geometry-cyberspace-digital-art-lines-wallpaper-e9f0ce8a4cf2363ab03fe5b54917ba2b.jpg);
+            background-size: cover;
+            background-repeat: no-repeat;
+        }
 
-<h1>Розклад групи @ViewBag.GroupName</h1>
+        .bg-mydark {
+            opacity: 0.8;
+        }
 
-<p>
-    <!-- @Html.ActionLink("Створити новий розклад", "Create", new { Id = @ViewBag.GroupId , Name = ViewBag.GroupName})-->
-</p>
-<table class="table">
-    <thead>
-        <tr>
-            <th>
-                Виберіть день:
-            </th>
-            <th></th>
-        </tr>
-    </thead>
-    <tbody>
-@foreach (var item in Model) {
-        <tr>
-            <td>
-                <a asp-action="ShowLessons" asp-route-id="@item.Id"> @Html.DisplayFor(modelItem => item.Day.Name)</a>
-            </td>
-        </tr>
-}
-    </tbody>
-</table>
+        .text-mybright {
+            opacity: 1;
+            color: black;
+        }
+    </style>
+</head>
+<div class="bg-light text-center bg-mydark">
+    <h1 class="text-center text-mybright">Розклад групи @ViewBag.GroupName</h1>
+
+    <p>
+        <!-- @Html.ActionLink("Створити новий розклад", "Create", new { Id = @ViewBag.GroupId , Name = ViewBag.GroupName})-->
+    </p>
+    </div>
+    <table class="table jumbotron bg-mydark">
+        <thead class="text-mybright">
+            <tr>
+                <th>
+                    Виберіть день:
+                </th>
+                <th></th>
+            </tr>
+        </thead>
+        <tbody class="text-mybright">
+            @foreach (var item in Model)
+            {
+                <tr>
+                    <td>
+                        <a asp-action="ShowLessons" asp-route-id="@item.Id"> @Html.DisplayFor(modelItem => item.Day.Name)</a>
+                    </td>
+                </tr>
+            }
+        </tbody>
+    </table>
