--- a/University(MVC)/Views/Deparments/Index.cshtml
+++ b/University(MVC)/Views/Deparments/Index.cshtml
@@ -3,6 +3,15 @@
 @{
     ViewData["Title"] = "Index";
 }
+@{
+    if (ViewBag.Error != null)
+    {
+        <div class="alert alert-dismissible alert-secondary">
+            <button type="button" class="close" data-dismiss="alert">&times;</button>
+            <strong class="text-center">@ViewBag.Error</strong>
+        </div>
+    }
+}
 
 <head>
     <style>
@@ -54,3 +63,28 @@
         }
     </tbody>
 </table>
+
+<div class="container">
+    <div id="chart1"></div>
+</div>
+
+@section scripts{
+    <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
+    <script type="text/javascript">
+        google.charts.load('current', { 'packages': ['corechart'] });
+        google.charts.setOnLoadCallback(drawChart);
+
+        function drawChart() {
+            $.get('/api/Charts/JsonData', function (jsonData) {
+                var data = google.visualization.arrayToDataTable(jsonData, false);
+                var option = {
+                    title: "Співвідношення студентів на кафедрах",
+                    width: 400,
+                    height: 300
+                }
+                var chart = new google.visualization.PieChart(document.getElementById('chart1'));
+                chart.draw(data, option);
+            })
+        }
+    </script>
+}
