--- a/University(MVC)/Views/Groups/ByDepartment.cshtml
+++ b/University(MVC)/Views/Groups/ByDepartment.cshtml
@@ -3,6 +3,15 @@
 @{
     ViewData["Title"] = "Index";
 }
+@{
+    if (ViewBag.Error != null)
+    {
+        <div class="alert alert-dismissible alert-secondary">
+            <button type="button" class="close" data-dismiss="alert">&times;</button>
+            <strong class="text-center">@ViewBag.Error</strong>
+        </div>
+    }
+}
 <head>
     <style>
         body {
@@ -23,48 +32,44 @@
 </head>
 <div class="bg-light text-center bg-mydark">
     <h1 class="text-center text-mybright">Групи кафедри @ViewBag.DepartmentName</h1>
-
-    <p class="text-center text-mybright">
-        <a asp-action="Create">Додати нову групу</a>
-    </p>
-    </div>
-    <table class="table jumbotron bg-mydark">
-        <thead class="text-mybright">
+</div>
+<table class="table jumbotron bg-mydark">
+    <thead class="text-mybright">
+        <tr>
+            <th>
+                @Html.DisplayNameFor(model => model.Name)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.ClassPr)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.Department)
+            </th>
+            <th></th>
+        </tr>
+    </thead>
+    <tbody class="text-mybright">
+        @foreach (var item in Model)
+        {
             <tr>
-                <th>
-                    @Html.DisplayNameFor(model => model.Name)
-                </th>
-                <th>
-                    @Html.DisplayNameFor(model => model.ClassPr)
-                </th>
-                <th>
-                    @Html.DisplayNameFor(model => model.Department)
-                </th>
-                <th></th>
-            </tr>
-        </thead>
-        <tbody class="text-mybright">
-            @foreach (var item in Model)
-            {
-                <tr>
-                    <td>
-                        @Html.DisplayFor(modelItem => item.Name)
-                    </td>
-                    <td>
-                        @Html.DisplayFor(modelItem => item.ClassPr.Name)
-                        @Html.DisplayFor(modelItem => item.ClassPr.Surname)
-                    </td>
-                    <td>
-                        @Html.DisplayFor(modelItem => item.Department.Name)
-                    </td>
-                    <td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Name)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.ClassPr.Name)
+                    @Html.DisplayFor(modelItem => item.ClassPr.Surname)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Department.Name)
+                </td>
+                <td>
 
-                        <a asp-action="Shedule" asp-route-id="@item.Id">Розклад</a> |
-                        <a asp-action="Edit" asp-route-id="@item.Id">Редагування</a> |
-                        <a asp-action="Details" asp-route-id="@item.Id">Студенти</a> |
-                        <a asp-action="Delete" asp-route-id="@item.Id">Видалення</a>
-                    </td>
-                </tr>
-            }
-        </tbody>
-    </table>
+                    <a asp-action="Shedule" asp-route-id="@item.Id">Розклад</a> |
+                    <a asp-action="Edit" asp-route-id="@item.Id">Редагування</a> |
+                    <a asp-action="Details" asp-route-id="@item.Id">Студенти</a> |
+                    <a asp-action="Delete" asp-route-id="@item.Id">Видалення</a>
+                </td>
+            </tr>
+        }
+    </tbody>
+</table>
