--- a/University(MVC)/Views/Groups/Index.cshtml
+++ b/University(MVC)/Views/Groups/Index.cshtml
@@ -39,7 +39,10 @@
 <div class="bg-light text-center bg-mydark">
     <h1 class="text-center text-mybright">Групи</h1>
     <p class="text-center text-mybright">
-        <a asp-action="Create">Створити нову групу</a>
+        @if (User.IsInRole("admin"))
+        {
+            <a asp-action="Create">Створити нову групу</a>
+        }
     </p>
 </div>
 
@@ -76,9 +79,11 @@
                 <td>
 
                     <a asp-action="Shedule" asp-route-id="@item.Id">Розклад</a> |
-                    <a asp-action="Details" asp-route-id="@item.Id">Студенти</a> |
-                    <a asp-action="Edit" asp-route-id="@item.Id">Редагування</a> |
-                    <a asp-action="Delete" asp-route-id="@item.Id">Видалення</a>
+                    <a asp-action="Details" asp-route-id="@item.Id">Студенти</a> 
+                    @if (User.IsInRole("admin"))
+                    {
+                        <a> | </a><a asp-action="Edit" asp-route-id="@item.Id">Редагування</a> <a> | </a><a asp-action="Delete" asp-route-id="@item.Id">Видалення</a>
+                    }
                 </td>
             </tr>
         }
