--- a/University(MVC)/Views/Lessons/Index.cshtml
+++ b/University(MVC)/Views/Lessons/Index.cshtml
@@ -34,7 +34,9 @@
 <div class="bg-light text-center bg-mydark">
     <h1 class="text-center text-mybright">Предмети</h1>
     <p class="text-center text-mybright">
-        <a asp-action="Create">Додати новий предмет</a>
+        @if (User.IsInRole("admin")) { 
+            <a asp-action="Create">Додати новий предмет</a>
+        }
     </p>
 </div>
 <table class="table jumbotron bg-mydark">
@@ -54,8 +56,10 @@
                     @Html.DisplayFor(modelItem => item.Name)
                 </td>
                 <td>
-                    <a asp-action="Edit" asp-route-id="@item.Id">Редагування</a> |
-                    <a asp-action="Delete" asp-route-id="@item.Id">Видалення</a>
+                    @if (User.IsInRole("admin"))
+                    {
+                        <a> | </a><a asp-action="Edit" asp-route-id="@item.Id">Редагування</a> <a> | </a><a asp-action="Delete" asp-route-id="@item.Id">Видалення</a>
+                    }
                 </td>
             </tr>
         }
