--- a/University(MVC)/Views/Shared/_Layout.cshtml
+++ b/University(MVC)/Views/Shared/_Layout.cshtml
@@ -5,11 +5,14 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <style>
+        body {
+            background-image: url(https://p4.wallpaperbetter.com/wallpaper/670/883/685/plexus-atoms-neutrons-electrons-wallpaper-79a0785d113a8d2b6647683f10e1068d.jpg)
+        }
+
         .mypurp {
-            
             display: inline-block;
             font-weight: 400;
-            color:white;
+            color: white;
             text-align: center;
             vertical-align: middle;
             cursor: pointer;
@@ -27,15 +30,26 @@
             transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, -webkit-box-shadow 0.15s ease-in-out;
             transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
             transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out, -webkit-box-shadow 0.15s ease-in-out;
+            
+        }
+        .menu {
+            position: fixed; /* Фиксированное положение */
+            right: 20px; /* Расстояние от правого края окна браузера */
+            top: 20px; /* Расстояние сверху */
+        }
+        .menu1 {
+            position: fixed; /* Фиксированное положение */
+            right: 120px; /* Расстояние от правого края окна браузера */
+            top: 20px; /* Расстояние сверху */
         }
         /*body{
-       
+
         }
         .body-bg-img {
             background-color: aqua;
             background-size: cover;
             background-repeat:no-repeat;
-            background-image: url(../109970niBCRIKyL8kn5M5w4ON5.png); 
+            background-image: url(../109970niBCRIKyL8kn5M5w4ON5.png);
             position: absolute;
             width: 100%;
             height: 100%;
@@ -44,8 +58,9 @@
     </style>
     <title>@ViewData["Title"] - University_MVC_</title>
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap_pulse.min.css" />
-    <link rel="stylesheet" href="~/css/site.css" />
     <link rel="stylesheet" href="~/css/StyleSheet.css" />
+    <link rel="stylesheet" href="~/css/site.css" />
+    
 </head>
 <body>
     <div></div>
@@ -65,24 +80,58 @@
                         <li class="nav-item">
                             <a class="nav-link text-white" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
                         </li>
-                        <li>
-                            <div class="btn-group" role="group" aria-label="Button group with nested dropdown">
-                                <button type="button" class="mypurp">Import/Export</button>
-                                <div class="btn-group" role="group">
-                                    <button id="btnGroupDrop1" type="button" class="mypurp dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"></button>
-                                    <div class="dropdown-menu" aria-labelledby="btnGroupDrop1" style="">
-                                        <a class="dropdown-item" asp-controller="Groups" asp-action="Export">Export</a>
-                                        @using (Html.BeginForm("Import", "Groups", FormMethod.Post, new { enctype = "multipart/form-data", id = "frm-excel" }))
-                                        {
+                        @if (User.IsInRole("admin"))
+                        {
+                            <li>
+                                <div class="btn-group" role="group" aria-label="Button group with nested dropdown">
+                                    <button type="button" class="mypurp">Import/Export</button>
+                                    <div class="btn-group" role="group">
+                                        <button id="btnGroupDrop1" type="button" class="mypurp dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"></button>
+                                        <div class="dropdown-menu" aria-labelledby="btnGroupDrop1" style="">
+                                            <a class="dropdown-item" asp-controller="Groups" asp-action="Export">Export</a>
+                                            <a class="dropdown-item" asp-controller="Groups" asp-action="ExportDocx">ExportDocx</a>
+                                            @using (Html.BeginForm("Import", "Groups", FormMethod.Post, new { enctype = "multipart/form-data", id = "frm-excel" }))
+                                            {
 
-                                            <input type="submit" value="Import" class="dropdown-item" />
-                                            <input type="file" name="fileExcel" id="fileExcel" />
-                                        }
+                                                <input type="submit" value="Import" class="dropdown-item" />
+                                                <input type="file" name="fileExcel" id="fileExcel" />
+                                            }
 
+                                        </div>
                                     </div>
                                 </div>
-                            </div>
-                        </li>
+                            </li>
+                        }
+                        @if (User.Identity.IsAuthenticated)
+                        {
+                            <li><p class="menu1 mypurp">@User.Identity.Name</p></li>
+
+                           
+                        }
+                        else
+                        {
+
+                            <li>
+                                <form method="post" asp-controller="Account" asp-action="Login">
+                                    <input type="submit" value="Вхід" class="menu1 mypurp " />
+                                </form>
+
+                            </li>
+                            <li>
+                                <form method="post" asp-controller="Account" asp-action="Register">
+                                    <input type="submit" value="Реєстрація" class="menu mypurp" />
+                                </form>
+                            </li>
+                        }
+                        @if (User.Identity.IsAuthenticated)
+                        {
+                            <li class="menu">
+                                <form method="post" asp-controller="Users" asp-action="OneUser">
+                                    <input type="submit" value="MyPage" class="mypurp text-right" />
+                                </form>
+                            </li>
+                        }
+
                     </ul>
                 </div>
             </div>
