--- a/University(MVC)/Views/Students/Index.cshtml
+++ b/University(MVC)/Views/Students/Index.cshtml
@@ -25,7 +25,9 @@
     <h1 class="text-center text-mybright">Студенти за групою @ViewBag.GroupName</h1>
 
     <p class="text-center text-mybright">
-        @Html.ActionLink("Додати нового студента", "Create", new { groupId = ViewBag.GroupId })
+        @if (User.IsInRole("admin")) { 
+            @Html.ActionLink("Додати нового студента", "Create", new { groupId = ViewBag.GroupId })
+            }
     </p>
     </div>
     <table class="table jumbotron bg-mydark">
@@ -66,8 +68,10 @@
                     </td>
 
                     <td>
-                        @Html.ActionLink("Редагування", "Edit", new { id = item.Id, groupId = ViewBag.GroupId }) |
-                        <a asp-action="Delete" asp-route-id="@item.Id">Видалення</a>
+                        @if (User.IsInRole("admin"))
+                        {
+                           @Html.ActionLink("Редагування", "Edit", new { id = item.Id, groupId = ViewBag.GroupId }) <a> | </a><a asp-action="Delete" asp-route-id="@item.Id">Видалення</a>
+                        }
                     </td>
                 </tr>
             }
